Work-around to prevent URL-encoded string from getting re-encoded
closes #3
- Kludgy work-around:
    - Decode original URL string from podcast feed to restore spaces (or other reserved characters)
    - Cast back to URL in order to get arguments needed for return value